<resources>
    <string name="app_name">RxTimer</string>
    <string name="button_add">Add a Reminder</string>
    <string name="hello_world">Welcome to RxTimer!!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Save Reminder</string>
    <string name="action_save">Add Reminder</string>

    <string name="frequency">Repeat every....</string>
    <string name="frequency1">No Repeat</string>
    <string name="frequency2">4 hours</string>
    <string name="frequency3">8 hours</string>
    <string name="frequency4">12 hours</string>

    <string name="title_activity_alarm_info">alarmInfo</string>

    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>

    <string name="title_activity_reminder">Reminder</string>


    <string name="patient_name">Patient Name</string>
    <string name="med_name">Medicine Name</string>
    <string name="special_inst">Special Instructions</string>
    <string name="remind_title">Reminder Information</string>
    <string name="med_title">Medicine Information</string>

    <string name="title_activity_reminder_view">ReminderView</string>
    <string name="title_activity_reminder_details">ReminderDetails</string>
    <string name="title_activity_alarm__screen">Alarm_Screen</string>
    <string name="title_activity_alarm_screen">AlarmScreen</string>
    <string name="title_activity_reminder__list__item">Reminder_List_Item</string>
    <string name="title_activity_alarm_details">Alarm Details</string>
    <string name="empty_text">No Alarm Available</string>

    <string name="alarm_tone">Alarm Tone</string>
    <string name="alarm_tone_default">Select an alarm tone</string>

</resources>
