<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:RxTimer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" RxTimer:showAsAction="never" />

    <item
        android:id="@+id/action_add_reminder"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/action_add"
        android:orderInCategory="101"
        RxTimer:showAsAction="always"
        />

     <item
         android:id="@+id/action_save_reminder"
         android:icon="@drawable/ic_save_white_24dp"
         android:title="@string/action_save"
         android:orderInCategory="101"
         RxTimer:showAsAction="always"
         />
</menu>
