<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding ="@dimen/activity_horizontal_margin"

    tools:context="com.rxalarms.rxtimer.alarmInfo"
    android:background="@android:color/darker_gray">


    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_name"
        android:textSize="10pt"
        android:textColor="#fffffefc"
        />


    <EditText
        android:id="@+id/EditTextName"
        android:layout_height="wrap_content"
        android:hint="@string/patient_name"
        android:inputType="textPersonName"
        android:layout_width="fill_parent"
        android:textColor="#ffffff"
        android:layout_below="@id/TextViewTitle"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/med_title"
        android:id="@+id/medDetailsTextView"
        android:textSize="10pt"
        android:textColor="#ffffffff"
        android:layout_below="@id/EditTextName"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/med_name"
        android:ems="10"
        android:id="@+id/medNameText"
        android:textColor="#ffffff"
        android:layout_below="@id/medDetailsTextView"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/specialInstText"
        android:hint="@string/special_inst"
        android:textColor="#ffffff"
        android:layout_below="@id/medNameText"
        />

    <TextView
        android:id="@+id/ReminderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:text="@string/remind_title"
        android:textColor="#ffffffff"
        android:layout_below="@id/specialInstText"
    />

    <CheckBox
        android:id="@+id/CheckBoxResponse"
        android:layout_height="wrap_content"
        android:text="Alarm on"
        android:layout_width="fill_parent"
        android:textColor="#fffbffff"
        android:layout_below="@id/specialInstText"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/ReminderLabel"
    />



    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/freqText"
       android:text="@string/frequency"
        android:textSize="10pt"

        android:layout_below="@+id/endDateTextView" />

    <Spinner
        android:id="@+id/SpinnerFeedbackType"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:entries="@array/frequencyList"
        android:textColor="@color/abc_background_cache_hint_selector_material_light"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/endDateTextView"
        android:paddingTop="8dp"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/endDateSet"
        android:layout_alignStart="@+id/endDateSet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startTimeTextView"
        android:text="@string/start_time"
        android:layout_below="@id/ReminderLabel"
        android:textSize="10pt"
        android:paddingTop="8dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="8"
        android:id="@+id/startTime"
        android:hint="@string/start_time"
        android:textColor="#ffffff"
        android:layout_below="@id/ReminderLabel"

        android:layout_alignParentRight="true"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startDateTextView"
        android:text="@string/start_date"
        android:layout_below="@id/startTimeTextView"
        android:textSize="10pt"
        android:paddingTop="8dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="8"
        android:id="@+id/startDateSet"
        android:hint="@string/start_date"
        android:textColor="#ffffff"
        android:layout_below="@id/startTimeTextView"

        android:layout_alignParentRight="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/endDateTextView"
        android:text="@string/end_date"
        android:textSize="10pt"
        android:paddingTop="8dp"
        android:layout_below="@id/startDateTextView"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:id="@+id/endDateSet"
        android:hint="@string/end_date"
        android:textColor="#ffffff"
        android:layout_below="@id/startDateTextView"
        android:layout_alignParentRight="true"
        android:inputType="date"
     />

</RelativeLayout>
